some more content

--- a/topology/index.html
+++ b/topology/index.html
@@ -11,7 +11,12 @@
      				{topic: 'Limit point', link: 'http://en.wikipedia.org/wiki/Limit_point'},
      				{topic: 'Axiom of choice' ,link: 'http://mathworld.wolfram.com/AxiomofChoice.html'},
      				{topic: 'Closure', link : 'http://en.wikipedia.org/wiki/Closure_(topology)'},
-     				{topci: 'Connected Component', link : 'http://mathworld.wolfram.com/ConnectedComponent.html'}];
+     				{topic: 'Connected Component', link : 'http://mathworld.wolfram.com/ConnectedComponent.html'},
+     				{topic: 'Connectedness Reference', link : 'http://www.math.wustl.edu/~freiwald/ch5.pdf'},
+     				{topic: 'Continuous image of connected set is connected: proof', link : 'http://www.math.tamu.edu/~tvogel/410/sect111a.pdf'},
+     				{topic: 'homeomorphism', link : 'http://www.maths.uq.edu.au/courses/MATH3402/Lectures/home.pdf'},
+     				{topic: 'Equivalence relation/class', link : 'http://en.wikipedia.org/wiki/Equivalence_relation'},
+     				{topic: 'Path Connectedness', link : 'https://simomaths.wordpress.com/2013/03/07/topology-path-connected-spaces/'}];
 
 var App = React.createClass({
   render: function() {
