some more links

--- a/topology/index.html
+++ b/topology/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+  <title>Topology Notes for Mid1</title>
     <script src="build/react.js"></script>
     <script src="build/JSXTransformer.js"></script>
   </head>
@@ -16,7 +17,10 @@
      				{topic: 'Continuous image of connected set is connected: proof', link : 'http://www.math.tamu.edu/~tvogel/410/sect111a.pdf'},
      				{topic: 'homeomorphism', link : 'http://www.maths.uq.edu.au/courses/MATH3402/Lectures/home.pdf'},
      				{topic: 'Equivalence relation/class', link : 'http://en.wikipedia.org/wiki/Equivalence_relation'},
-     				{topic: 'Path Connectedness', link : 'https://simomaths.wordpress.com/2013/03/07/topology-path-connected-spaces/'}];
+     				{topic: 'Path Connectedness', link : 'https://simomaths.wordpress.com/2013/03/07/topology-path-connected-spaces/'},
+     				{topic: 'Union of connected sets is connected', link : 'http://math.stackexchange.com/questions/425007/union-of-connected-subsets-is-connected-if-intersection-is-nonempty'},
+     				{topic: 'connected theorems [imp]', link : 'https://math.dartmouth.edu/~m54x12/m54lecture13.pdf'},
+     				{topic: 'closure of connected is connectd', link : 'http://math.stackexchange.com/questions/232940/closure-of-connected-set-imply-connected'}];
 
 var App = React.createClass({
   render: function() {
