--- a/index.html
+++ b/index.html
@@ -1,10 +1,77 @@
-<html>
-	<head>
-  		<title>yash | girdhar</title>
- <link rel="stylesheet" type="text/css" href="style.css">
-  	</head>
-  	<body>
-  	<div>
-  	</div>
-  	</body>
+<!DOCTYPE html>	
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<head>
+    <meta charset="utf-8">
+   	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width">
+
+	<link rel="stylesheet" href="css/style.css" />
+	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,400italic,600italic&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+
+	<script src="js/functions.js" type="text/javascript"></script>
+	<script src="js/html5shiv.js" type="text/javascript"></script>
+	
+</head>
+	<body>
+		<img src="img/back.jpg" alt="" id="bgimg" class="bg"/>
+		<!-- /#bg -->
+		<section id="wrapper">
+			<!--header-->
+			<header>
+				<div class="shell">
+					<h1>yashasvi</h1>
+				</div>
+			</header><!--/header-->
+			<!--location-->
+			<section id="location">
+				<div class="shell">
+					<div class="holder">
+						<ul>
+							<li class="loc"><img src="img/loc.png"><span>India</span></li>
+							<li class="briefcase"><img src="img/briefcase.png"><span>undergrad in computer science</span></li>
+						</ul>
+						<div class="clear"></div>
+					</div>
+				</div>
+			</section><!--/location-->
+			<!--social-->
+			<!--/social-->
+			<!--content section-->
+			<section id="cont">
+				<div class="shell">
+					<!--content-->
+					<div>
+						<p>I am a software Developer and currently an undergrad in computer science.</p>
+
+						<p>I am completely fascinated by the idea of a digital nomad and looking for some remote work that lets me enter this world.</p>
+
+						<p>At present, I live in Hyderabad, and one of my to do's for the next 3 months is to tick off all the good restaurants here.</p>
+
+						<p>I Have been a Google summer of code student in 2013 and 2014.<br><br>Have been to Tokyo for two months, for a software developer internship in Works Applications. Sunrise at Mount Fuji was my best experience there.</p>
+
+						<p>Life according to me is the experiences that you gain, most importantly the ones that you are not ready for.<br>
+
+The most memorable moment of my life was when I jumped off a 62 metre bridge with a bungee cord in Tokyo.</p>
+					</div><!--/content-->
+					<!--button
+					<div class="btn-handler">
+						<a href="#" class="button">Click Here To Go To My Startup's Website!</a>
+					</div>/button-->
+				</div>
+			</section><!--/content section -->
+			<section id="social-links">
+				<div class="shell">
+					<div id="social-icons">
+						<a href="#"><img src="img/twitter.png" alt=""/></a>
+						<a href="#"><img src="img/linkin.png" alt=""/></a>
+					</div>
+					<div class="clear"></div>
+				</div>
+			</section>
+			<div class="clear"></div>
+		</section>
+	</body>
 </html>
