--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@ The most memorable moment of my life was when I jumped off a 62 metre bridge wit
 			<section id="social-links">
 				<div class="shell">
 					<div id="social-icons">
-						<a href="#"><img src="img/twitter.png" alt=""/></a>
-						<a href="#"><img src="img/linkin.png" alt=""/></a>
+						<a href="https://twitter.com/yashasvigirdhar"><img src="img/twitter.png" alt=""/></a>
+						<a href="http://in.linkedin.com/in/yashgirdhar"><img src="img/linkin.png" alt=""/></a>
+						<a href="http://yesitsyash.blogspot.in"><img src="img/blogger.png" alt="" /> </a>
+						<a href="https://github.com/itsyash"><img src="img/git.png" alt="" /> </a>
 					</div>
 					<div class="clear"></div>
 				</div>
